docs: Enhance documentation across Java best practices examples for clarity and educational value